+-------------------+
|  VERSIONE: 0.0.1  |
+-------------------+

02/07/2021:
- Ratio: creata la libreria che gestisce i numeri razionali (classe template)
- Bignum: aggiunte le funzioni pow() e div()

30/06/2021:
- rinominate le cartelle (quelle non caricate hanno l'underscore davanti)
- aggiunto l'esempio "bigFibonacci" per la classe Bignum (programmato linearmente e non ricorsivo)
- Matrix: aggiustata la gestione della memoria per la classe Matrix. In particolare il copy constructor e l'operatore =
- aggiunto l'esempio "MersennePrimes". Ci mette tantissimo a calcolare a causa del fatto che Bignum non è ottimizzato
- Bignum: aggiunte le definizioni delle funzioni ++ e -- per Bignum

29/06/2021:
- Matrix: aggiunte la classe "Matrix" e le funzioni associate per calcolare le matrici e i vettori

23/06/2021:
- Bignum: aggiunti divisione e modulo

17/04/2021:
- creazione del progetto GitHub
- Bignum: miglioramento costruttore a stringa
- Bignum: implementato il calcolo della sottrazione con i giusti segni (da migliorare)